--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "serialport": "^9.0.0",
     "source-map-support": "^0.5.19",
+    "tcp-port-used": "^1.0.1",
     "typescript": "^3.9.2"
   },
   "devDependencies": {
