--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,6 +13,7 @@
 				"-socket", "12000",
 				"-serial", "/dev/cu.usbserial-14620",
 				"-baudrate", "230400",
+				"-testserial", "5", "100"
 				//"-test"
 			],
 			"cwd": "${workspaceRoot}",
