Reconnects now after disconnect.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
 			"program": "${workspaceFolder}/out/main.js",
 			"args": [
 				"-socket", "12000",
-				"-serial", "/dev/cu.usbserial-14620",
+				"-serial", "/dev/cu.usbserial-AQ007PCD",
 				//"-baudrate", "921600",
 				//"-testserial", "2", "1000"
 				//"-test"
