testloopback with DZRP.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,9 +11,10 @@
 			"program": "${workspaceFolder}/out/main.js",
 			"args": [
 				"-socket", "12000",
-				"-serial", "/dev/cu.usbserial-AQ007PCD",
+				//"-serial", "/dev/cu.usbserial-AQ007PCD",
+				"-serial", "/dev/cu.usbserial-14610",
 				//"-baudrate", "921600",
-				//"-testserial", "2", "1000"
+				"-testloopback", "2", "1000"
 				//"-test"
 			],
 			"cwd": "${workspaceRoot}",
