--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,14 +11,32 @@
 			"program": "${workspaceFolder}/out/main.js",
 			"args": [
 				"-socket", "12000",
-				//"-serial", "/dev/cu.usbserial-AQ007PCD",
-				"-serial", "/dev/cu.usbserial-14610",
-				//"-baudrate", "921600",
-				"-testloopback", "2", "1000"
-				//"-test"
+				"-serial", "/dev/cu.usbserial-AQ007PCD",
 			],
 			"cwd": "${workspaceRoot}",
 			"runtimeArgs": ["-r", "ts-node/register"],
+			"console": "externalTerminal",
+			"internalConsoleOptions": "openOnSessionStart"
+		},
+
+		{
+			"type": "node",
+			"request": "launch",
+			"name": "Loopback",
+			"program": "${workspaceFolder}/out/main.js",
+			"args": [
+				"-socket",
+				"12000",
+				"-serial",
+				"/dev/cu.usbserial-AQ007PCD",
+				"-testloopback", "2", "200"
+				//"-test"
+			],
+			"cwd": "${workspaceRoot}",
+			"runtimeArgs": [
+				"-r",
+				"ts-node/register"
+			],
 			"console": "externalTerminal",
 			"internalConsoleOptions": "openOnSessionStart"
 		}
