--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dezogserialif",
-  "version": "1.1.1",
+  "version": "1.2.0",
   "description": "Program to allow DeZog communicating with a ZX Next through a serial interface.",
   "main": "./out/main.js",
   "scripts": {
@@ -13,15 +13,14 @@
   },
   "author": "Thomas Busse",
   "dependencies": {
-    "bl": "^4.0.3",
-    "serialport": "^9.0.0",
-    "source-map-support": "^0.5.19",
-    "tcp-port-used": "^1.0.1",
-    "typescript": "^3.9.2"
+    "bl": "^5.0.0",
+    "serialport": "^10.3.0",
+    "source-map-support": "^0.5.21",
+    "tcp-port-used": "^1.0.2",
+    "typescript": "^4.5.5"
   },
   "devDependencies": {
-    "@types/node": "14.0.1",
-    "ts-node": "^8.10.1",
-    "tslint": "6.1.2"
+    "@types/node": "17.0.21",
+    "ts-node": "^10.5.0"
   }
 }
